--- a/src/globals.css
+++ b/src/globals.css
@@ -1,14 +1,20 @@
 @import "./utilities.css";
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+@keyframes changeColour {
+    0% { color: var(--accent-colour); }
+    50% { color: var(--primary); }
+    100% { color: var(--accent-colour); }
+}
+
 :root {
     --background-colour: #191c25;
     --accent-colour: #1d90c6;
     --primary: #1dc6a1;
     --text-colour: #eee;
-    --navbar-background: #222;
+    --navbar-background: #323841;
     --navbar-text: #fff;
-    --heading-colour: #1dc6b5;
+    --heading-colour: #1db8c6;
 }
 
 * {
@@ -43,6 +49,7 @@ h6 {
     font-weight: bold;
     text-transform: uppercase;
     font-size: 3rem;
-    mask-image: linear-gradient(90deg,var(--accent-colour) 0%, var(--primary) 100%);
-    -webkit-mask-image: linear-gradient(90deg,var(--accent-colour) 0%, var(--primary) 100%);
+    /* mask-image: linear-gradient(90deg,var(--accent-colour) 0%, var(--primary) 100%);
+    -webkit-mask-image: linear-gradient(90deg,var(--accent-colour) 0%, var(--primary) 100%); */
+    animation: changeColour 10s infinite;
 }
