--- a/src/globals.css
+++ b/src/globals.css
@@ -29,6 +29,7 @@
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.3;
 }
 
 body {
@@ -49,6 +50,9 @@ h6 {
     font-family: 'Inter', sans-serif;
     color: var(--heading-colour);
     font-weight: 500;
+    display: flex;
+    justify-self: center;
+    align-self: center;
 }
 
 #title {
@@ -57,11 +61,14 @@ h6 {
     font-weight: bold;
     text-transform: uppercase;
     font-size: 3rem;
-    display: flex;
-    justify-self: center;
-    align-self: center;
     padding: 0.5rem 2rem;
     border-bottom: solid calc(1 / 16 * 1rem) var(--accent-colour);
     animation: changeColour 20s infinite, changeBorderColour 15s infinite;
 }
 
+p {
+    width: 50%;
+    margin: auto;
+    padding: 0.3rem;
+    background: none;
+}
