--- a/src/transitions.css
+++ b/src/transitions.css
@@ -43,3 +43,53 @@
     position: relative;
     overflow: hidden;
 }
+
+/* Scale Slide Fade */
+
+.scale-slide-fade-from-left-enter-active,
+.scale-slide-fade-from-left-leave-active {
+    position: absolute;
+    transition: all 0.85s ease;
+}
+
+.scale-slide-fade-from-left-enter-from {
+    left: -100%;
+}
+
+.scale-slide-fade-from-left-enter-to {
+    left: 0%;
+}
+
+.scale-slide-fade-from-left-leave-from {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.scale-slide-fade-from-left-leave-to {
+    transform: scale(0.8);
+    opacity: 0;
+}
+
+.scale-slide-fade-from-right-enter-active,
+.scale-slide-fade-from-right-leave-active {
+    position: absolute;
+    transition: all 0.85s ease;
+}
+
+.scale-slide-fade-from-right-enter-from {
+    left: 100%;
+}
+
+.scale-slide-fade-from-right-enter-to {
+    left: 0%;
+}
+
+.scale-slide-fade-from-right-leave-from {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.scale-slide-fade-from-right-leave-to {
+    transform: scale(0.8);
+    opacity: 0;
+}
