--- a/src/transitions.css
+++ b/src/transitions.css
@@ -1,6 +1,6 @@
 .fade-enter-active,
 .fade-leave-active {
-    transition: opacity 0.5s ease;
+    transition: opacity 850ms ease;
 }
 
 .fade-enter-from,
@@ -9,14 +9,14 @@
 }
 
 .fade-appear-active {
-    transition: opacity 0.5s ease-in-out;
+    transition: opacity 850ms ease-in-out;
 }
 
 .slide-from-left-enter-active,
 .slide-from-left-leave-active,
 .slide-from-right-enter-active,
 .slide-from-right-leave-active {
-    transition: all 0.75s ease-out;
+    transition: all 850ms ease-out;
     position: absolute;
     top: 0;
     left: 0;
@@ -49,7 +49,7 @@
 .scale-slide-fade-from-left-enter-active,
 .scale-slide-fade-from-left-leave-active {
     position: absolute;
-    transition: all 0.85s ease;
+    transition: all 850ms ease;
 }
 
 .scale-slide-fade-from-left-enter-from {
@@ -73,7 +73,7 @@
 .scale-slide-fade-from-right-enter-active,
 .scale-slide-fade-from-right-leave-active {
     position: absolute;
-    transition: all 0.85s ease;
+    transition: all 850ms ease;
 }
 
 .scale-slide-fade-from-right-enter-from {
