--- a/src/globals.css
+++ b/src/globals.css
@@ -1,6 +1,7 @@
 @import "./utilities.css";
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "./transitions.css";
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 @keyframes changeColour {
     0% {
@@ -83,4 +84,6 @@ p {
     margin: auto;
     padding: 0.3rem;
     background: none;
+    font-family: "Raleway";
+    font-size: 1.3rem;
 }
