Set up tres.js. Almost done text morph effect, but there is a small issue with the CSS.

--- a/src/transitions.css
+++ b/src/transitions.css
@@ -53,11 +53,11 @@
 }
 
 .scale-slide-fade-from-left-enter-from {
-    left: -100%;
+    transform: translateX(-100%);
 }
 
 .scale-slide-fade-from-left-enter-to {
-    left: 0%;
+    transform: translateX(0);
 }
 
 .scale-slide-fade-from-left-leave-from {
@@ -77,11 +77,11 @@
 }
 
 .scale-slide-fade-from-right-enter-from {
-    left: 100%;
+    transform: translateX(100%);
 }
 
 .scale-slide-fade-from-right-enter-to {
-    left: 0%;
+    transform: translateX(0);
 }
 
 .scale-slide-fade-from-right-leave-from {
