--- a/src/globals.css
+++ b/src/globals.css
@@ -41,7 +41,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Raleway", Arial, Helvetica, sans-serif;
     line-height: 1.3;
 }
 
@@ -50,7 +50,8 @@ body {
     color: var(--text-colour);
 }
 
-body *:first-child:not(nav):not(a) {
+/* Don't question it */
+body *:first-child:not(nav):not(a):not(div#app) {
     margin-top: 3rem;
 }
 
@@ -83,7 +84,5 @@ p {
     width: 45%;
     margin: auto;
     padding: 0.3rem;
-    background: none;
-    font-family: "Raleway";
     font-size: 1.3rem;
 }
